--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==3.2.12"
 psycopg2-binary = "*"
 python-decouple = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
